# ai-personal-financial-insights

./: .gitignore  Dockerfile  README.md  app.py  categories_config.json  config.py  conversational_assitent.py  database.py  financial_health_score.py  home.py  pyproject.toml  requirements.txt  swagger.yaml  transactions.csv
routes/: __init__.py  alerts.py  chatbot.py  daily_spend.py  decorators.py  financial_score.py  health.py  spending_by_category.py  statistics.py  transactions.py
utils/: logging_utils.py
